--- a/.github/workflows/post-commit.yml
+++ b/.github/workflows/post-commit.yml
@@ -21,7 +21,7 @@ jobs:
       run: cargo build --release
       
     - name: Run chat server
-      run: cargo run --bin server 8080
+      run: nohup cargo run --bin server 8080 &
 
     - name: Wait for server to start
       run: sleep 15
