--- a/.github/workflows/post-commit.yml
+++ b/.github/workflows/post-commit.yml
@@ -38,5 +38,8 @@ jobs:
     - name: Stop server gracefully
       run: pkill -SIGINT server
     
-    - name: Show the log
-      run: ls
+    - name: Show server log
+      run: cat server.log
+
+    - name: Show client log
+      run: cat client.log
